# text-to-speech-service

./: Dockerfile  README.md  development.Dockerfile  pyproject.toml  requirements-all.txt  requirements.txt
.github/workflows/: workflow.yml
src/: main.py  my_service.py  tts_calls.py
