[project]
name = "text-to-speech" # Edit this and remove comment
version = "1.0.0"

requires-python = ">=3.13"
dependencies = [
    "common-code[test] @ git+https://github.com/swiss-ai-center/common-code.git@main",
    "requests==2.32.3",
    "mutagen==1.47.0",
    "pydub>=0.25.1",
    "audioop-lts>=0.2.2",
]
[tool.pytest.ini_options]
pythonpath = [".", "src"]
addopts = "--cov-config=.coveragerc --cov-report xml --cov-report term-missing --cov=./src"
